# research-assistant

./: .gitignore  README.md  pyproject.toml  response_example.txt
src/agents/: analyzer_agent.py  conversational_agent.py  extractor_agent.py  prompts.py
src/data/: match_pdfs.ipynb  vector_database.py  zotero_integration.py  zotero_pdf_matches.csv
ui/: app.py
